--- a/config.json
+++ b/config.json
@@ -1,23 +1,24 @@
 {
     "model" : {
-        "min_input_size":       288,
+        "min_input_size":       352,
         "max_input_size":       448,
-        "anchors":              [55,69, 75,234, 133,240, 136,129, 142,363, 203,290, 228,184, 285,359, 341,260],
-        "labels":               ["kangaroo"]
+        "anchors":              [117,142, 151,233, 187,341, 245,377, 248,223, 288,302, 324,379, 374,274, 383,387],
+        "labels":               ["raccoon"]
     },
 
     "train": {
-        "train_image_folder":   "/home/andy/Desktop/github/kangaroo/images/",
-        "train_annot_folder":   "/home/andy/Desktop/github/kangaroo/annots/",
-        "cache_name":           "kangaroo_train.pkl",
+        "train_image_folder":   "/home/minhnc-lab/WORKSPACES/AI/data/raccoon_dataset/images/",
+        "train_annot_folder":   "/home/minhnc-lab/WORKSPACES/AI/data/raccoon_dataset/annotations/",
+        "cache_name":           "raccoon_train.pkl",
 
-        "train_times":          8,
-        "batch_size":           16,
+        "train_times":          10,
+        "pretrained_weights":   "",
+        "batch_size":           4,
         "learning_rate":        1e-4,
-        "nb_epochs":            100,
+        "nb_epochs":             50,
         "warmup_epochs":        3,
         "ignore_thresh":        0.5,
-        "gpus":                 "0,1",
+        "gpus":                 "0",
 
         "grid_scales":          [1,1,1],
         "obj_scale":            5,
@@ -26,7 +27,7 @@
         "class_scale":          1,
 
         "tensorboard_dir":      "logs",
-        "saved_weights_name":   "kangaroo.h5",
+        "saved_weights_name":   "yolo3.weights",
         "debug":                true
     },
 
